--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,12 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+      
+      
+      
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/my_schema
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
