--- a/application.yml
+++ b/application.yml
@@ -10,6 +10,8 @@ eureka:
       
       
 spring:
+  application:
+    name: CONFIG-DEFAULT
   datasource:
     url: jdbc:mysql://localhost:3306/my_schema
     username: root
